[gd_scene load_steps=8 format=2]

[ext_resource path="res://square.png" type="Texture" id=1]
[ext_resource path="res://Enemy/BasicEnemy.gd" type="Script" id=2]
[ext_resource path="res://Sounds/Hit_Enemy.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/Dying.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/Crit.wav" type="AudioStream" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35.4472, 35.5203 )

[sub_resource type="CircleShape2D" id=2]
radius = 1450.5

[node name="BasicEnemy" type="KinematicBody2D"]
collision_layer = 4
collision_mask = 39
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="square" type="Sprite" parent="."]
modulate = Color( 0.443137, 0.054902, 0.054902, 1 )
texture = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
bus = "Sound"

[node name="DieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Sound"

[node name="CritSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
bus = "Sound"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
